Added gradBoost simulation

--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -25,7 +25,20 @@ With and without bootstraping. Maybe include this in Simulation 1.
 \subsection{Gradient boosting}
 \label{sub:SimGradBoost}
 \colorbox{yellow}{Both gradient and stochastic.}\\
-
+\colorbox{yellow}{Problems with gbm. See tutorial}
+\url{https://vimeo.com/71992876} \\
+\url{http://www.datarobot.com/blog/r-getting-started-with-data-science/}
+\\ \colorbox{yellow}{Should I include offset in the model?}
+\\ \colorbox{yellow}{Make adaboost with gbm as good as with adabag}
+\\ \colorbox{yellow}{Use gbm.fit, as it should be faster for ''power users''} \\
+\url{http://www.saedsayad.com/docs/gbm2.pdf} \colorbox{yellow}{Guide to gbm package}\\
+\\
+Simulation 1:\\
+Plot error as function of iterations. This should be done for different shrinkage parameters.\\
+Consider plotting training error as well.\\
+\\
+Simulation 2:\\
+Plot error as function of iterations, for different \verb+bag.fractions+.
 
 
 
