Adaboost simulations and plot

--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -40,6 +40,16 @@ Consider plotting training error as well.\\
 Simulation 2:\\
 Plot error as function of iterations, for different \verb+bag.fractions+.
 
+\subsection{Bagging and Random Forest}
+\label{sub:BaggandRFSim}
+Simulation 1: \\
+Do simulations for bagging with different bootstrap sizes.\\
+\\
+Simulation 2: \\
+\\
+Maybe together with bagging, do simulations for as function of $m$'s, for different bootstrap sizes? \\
+\colorbox{yellow}{Not sure what is best here.}
+
 
 
 
