--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -38,7 +38,16 @@ Plot error as function of iterations. This should be done for different shrinkag
 Consider plotting training error as well.\\
 \\
 Simulation 2:\\
-Plot error as function of iterations, for different \verb+bag.fractions+.
+Plot error as function of iterations, for different \verb+bag.fractions+, and report time for the different baggigs.\\
+\\
+Simulation 3:\\
+Use \verb+interaction.depth+ (nr of splits) to set depth of tree, and see how that affect error as function of nr of iteratoins/trees.\\
+\colorbox{yellow}{Maybe use carot to tune mode to see how good it is?}\\
+\url{http://topepo.github.io/caret/training.html}
+
+
+
+
 
 \subsection{Bagging and Random Forest}
 \label{sub:BaggandRFSim}
@@ -56,6 +65,7 @@ Maybe together with bagging, do simulations for as function of $m$'s, for differ
 
 \section{Compare methods}
 \label{sec:Compare methods}
+\colorbox{yellow}{Show CART here as well.}
 
 \subsection{Robustness}
 \label{sub:Robustness}
