First set of simulations done

--- a/latex/boosting.tex
+++ b/latex/boosting.tex
@@ -33,7 +33,8 @@ This is repeated for $m = 1, \ldots, M$. Finally the classifier is created
 \end{align}
 There are many choices of weak classifiers, but one of the more common is to use classification trees. It is then important to not grow an optimal tree as with CART, but instead grow a shallow tree or just stumps (one split).
 \\ \colorbox{yellow}{Why does the weak classifier has to be weak? Why not grow a large tree?}. An example of this implementation can be found in the r package \verb+adabag+ \cite{adabag}. How to best grow a weak classification tree for AdaBoost will not be further covered in this paper. But rather considered a tuning parameter.
-\\\colorbox{yellow}{Refer to paper where this is discussed?}\\
+\\\colorbox{yellow}{Refer to paper where this is discussed?}
+\\ \colorbox{yellow}{or aybe write a small section on tree size?}\\
 Later when adaboost is used on data, there is supplied a maximum depth of the trees to \verb+adabag+. So the trees will be grown to this size (no pruning) unless there are too few datapoints in the splitting node.
 
 \subsection{Forward stagewise Additive Modeling}
@@ -242,7 +243,8 @@ where $\nu$ is often referred to as the ''learning rate''. Empirically it has be
 
 \subsubsection{Tree size}
 \label{sub:Tree size}
-The number of terminal nodes in the trees $J$ can be tuned.
+The number of terminal nodes in the trees $J$ can be tuned. \\
+\colorbox{yellow}{See section $10.11$ in modstat}
 
 
 \subsection{Variable selection}
